# homework

./: Account.h  CMakeLists.txt  Transaction.h  main.cpp  run.bat  transactions1.csv  transactions2.csv
built/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  database.sqlite  log.txt  transactions-err.csv  transactions-imported.csv
tools/cmake-3.23.0-rc2-windows-x86_64/doc/cmake/html/release/: 3.0.html  3.1.html  3.10.html  3.11.html  3.12.html  3.13.html  3.14.html  3.15.html  3.16.html  3.17.html  3.18.html  3.19.html  3.2.html  3.20.html  3.21.html  3.22.html  3.23.html  3.3.html  3.4.html  3.5.html  3.6.html  3.7.html  3.8.html  3.9.html  index.html
